--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "PORT=3600 react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "CI='' react-app-rewired build",
     "test": "react-app-rewired test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
